--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     width: 100%;
     max-width: 600px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .input-name {
@@ -113,6 +114,7 @@ button {
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease
 }
 
 .button-add {
@@ -159,6 +161,7 @@ ul {
 
 .button-draw:hover {
     background-color: var(--color-button-hover);
+    transform: scale(1.05);
 }
 
 .button-redo {
@@ -169,8 +172,48 @@ ul {
     color: black;
     background-color: var(--color-button);
     font-size: 16px;
+    color: var(--color-white);
+    margin-top: 5px;
 }
 
 .button-redo img {
     margin-right: 40px;
+}
+
+.button-redo:hover {
+    transform: scale(1.05);
+}
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+@media (max-width: 768px) {
+    .main-title {
+        font-size: 36px;
+    }
+
+    .section-title {
+        font-size: 24px;
+    }
+
+    .input-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .input-name {
+        border-radius: 25px;
+        margin-bottom: 10px;
+    }
+
+    .button-add {
+        border-radius: 25px;
+    }
 }
